[metadata]
name = pytest-flask-ligand
author = Ryan Gard
author_email = ryan@gardiancapitol.com
summary = Pytest fixtures and helper functions to use for testing flask-ligand microservices.
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
version = 0.1.0

[files]
packages =
    pytest_flask_ligand
data_files =
    README.rst = README.rst

[bdist_wheel]
universal = 1

[options]
python_requires = >= 3.10

[options.entry_points]
pytest11 =
    flask_ligand = pytest_flask_ligand

[pbr]
skip_authors = True
skip_changelog = True
