[metadata]
name = pytest-flask-ligand
version = 0.0.0
summary = Pytest fixtures and helper functions to use for testing flask-ligand microservices.
description_file = README.rst
author = Ryan Gard
author_email = ryan@gardiancapitol.com
description_content_type = text/x-rst; charset=UTF-8
keywords = test, unittest
license = GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: Pytest
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
    Typing :: Typed
project_urls =
    Changelog=https://github.com/cowofevil/pytest-flask-ligand/blob/main/CHANGELOG.md
    Source=https://github.com/cowofevil/pytest-flask-ligand
    Tracker=https://github.com/cowofevil/pytest-flask-ligand/issues

[files]
packages =
    pytest_flask_ligand
data_files =
    README.rst = README.rst

[bdist_wheel]
universal = 1

[options]
python_requires = >= 3.10

[options.entry_points]
pytest11 =
    flask_ligand = pytest_flask_ligand

[pbr]
skip_authors = True
skip_changelog = True
skip_reno = True

[flake8]
max-line-length = 120
